[package]
name = "moonboard_api"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json", "gzip"] }
failure = "*"
tokio = { version = "*", features = ["macros"] }
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde"] }
env_logger = "*"
log = "*"
epochs = "*"
diesel = { version = "*", features = ["sqlite"] }
dotenv = "*"
serde_urlencoded = "*"